# codex-voice

./: .gitignore  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  environment.yml  pyproject.toml  requirements.txt
Sources/Agent/: CodexVoiceAgent.swift  CodexVoicePanelController.swift  I18n.swift  Models.swift  NativeHotkeyManager.swift  UIControls.swift  main.swift
config/: config.json  correction_prompt.txt  terms.json
raycast/: codex-voice-config.sh  codex-voice-copy-only.sh  codex-voice-strict.sh  codex-voice.sh
src/codex_voice/: __init__.py  config.py  config_cli.py  correction.py  i18n.py  jsonio.py  model_catalog.py  model_client.py  model_service.py  ollama.py  paste.py  paths.py  recording.py  state.py  transcription.py  voice.py
tests/: test_i18n.py  test_model_service.py  test_models_and_routes.py  test_paste.py  test_paths_config_state.py  test_text_and_ollama.py
