[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-voice"
version = "0.2.0"
description = "Local-first macOS voice input for Chinese dictation with IT terminology."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mlx-whisper>=0.4.2",
  "faster-whisper>=1.1.1",
  "sounddevice>=0.5.1",
  "numpy>=1.26",
  "pyperclip>=1.9",
  "requests>=2.32",
  "opencc-python-reimplemented>=0.1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-requests>=2.32",
]

[project.scripts]
codex-voice = "codex_voice.voice:main"
codex-voice-config = "codex_voice.config_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
disable_error_code = ["import-untyped"]
